refactor(backend): migrate cvesearch service from Thrift to Spring Boot REST
Signed-off-by: Shivamrut G <gshivamrut@gmail.com>